[gd_scene load_steps=12 format=2]

[ext_resource path="res://src/ui/menus/PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://src/ui/fonts/philosopher-bold-64.tres" type="DynamicFont" id=2]
[ext_resource path="res://src/ui/fonts/philosopher-bold-48.tres" type="DynamicFont" id=3]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[node name="PauseMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.470588 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 0.314584
anchor_top = 0.184259
anchor_right = 0.685416
anchor_bottom = 0.815741
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true,
"_editor_description_": ""
}

[node name="PauseMenu" type="VBoxContainer" parent="MarginContainer"]
margin_right = 711.0
margin_bottom = 682.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20
alignment = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ButtonResume" type="Button" parent="MarginContainer/PauseMenu"]
margin_top = 108.0
margin_right = 711.0
margin_bottom = 185.0
rect_min_size = Vector2( 360, 60 )
focus_neighbour_top = NodePath("../ButtonQuit")
focus_neighbour_bottom = NodePath("../ButtonRestart")
focus_next = NodePath("../ButtonRestart")
focus_previous = NodePath("../ButtonQuit")
custom_styles/focus = SubResource( 1 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_hover = Color( 0.929412, 0.94902, 0.341176, 1 )
custom_colors/font_color_pressed = Color( 0.490196, 0.94902, 0.341176, 1 )
text = "Resume"
flat = true

[node name="ButtonRestart" type="Button" parent="MarginContainer/PauseMenu"]
margin_top = 205.0
margin_right = 711.0
margin_bottom = 282.0
rect_min_size = Vector2( 360, 60 )
focus_neighbour_top = NodePath("../ButtonResume")
focus_neighbour_bottom = NodePath("../ButtonSettings")
focus_next = NodePath("../ButtonSettings")
focus_previous = NodePath("../ButtonResume")
custom_styles/focus = SubResource( 2 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_hover = Color( 0.929412, 0.94902, 0.341176, 1 )
custom_colors/font_color_pressed = Color( 0.490196, 0.94902, 0.341176, 1 )
text = "Restart current level"
flat = true

[node name="ButtonSettings" type="Button" parent="MarginContainer/PauseMenu"]
margin_top = 302.0
margin_right = 711.0
margin_bottom = 379.0
rect_min_size = Vector2( 360, 60 )
focus_neighbour_top = NodePath("../ButtonRestart")
focus_neighbour_bottom = NodePath("../ButtonMainMenu")
focus_next = NodePath("../ButtonMainMenu")
focus_previous = NodePath("../ButtonRestart")
custom_styles/focus = SubResource( 3 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_hover = Color( 0.929412, 0.94902, 0.341176, 1 )
custom_colors/font_color_pressed = Color( 0.490196, 0.94902, 0.341176, 1 )
text = "Settings"
flat = true

[node name="ButtonMainMenu" type="Button" parent="MarginContainer/PauseMenu"]
margin_top = 399.0
margin_right = 711.0
margin_bottom = 476.0
rect_min_size = Vector2( 360, 60 )
focus_neighbour_top = NodePath("../ButtonSettings")
focus_neighbour_bottom = NodePath("../ButtonQuit")
focus_next = NodePath("../ButtonQuit")
focus_previous = NodePath("../ButtonSettings")
custom_styles/focus = SubResource( 4 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_hover = Color( 0.929412, 0.94902, 0.341176, 1 )
custom_colors/font_color_pressed = Color( 0.490196, 0.94902, 0.341176, 1 )
text = "Back to Main Menu"
flat = true

[node name="ButtonQuit" type="Button" parent="MarginContainer/PauseMenu"]
margin_top = 496.0
margin_right = 711.0
margin_bottom = 573.0
rect_min_size = Vector2( 360, 60 )
focus_neighbour_top = NodePath("../ButtonMainMenu")
focus_neighbour_bottom = NodePath("../ButtonResume")
focus_next = NodePath("../ButtonResume")
focus_previous = NodePath("../ButtonMainMenu")
custom_styles/focus = SubResource( 5 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_hover = Color( 0.929412, 0.94902, 0.341176, 1 )
custom_colors/font_color_pressed = Color( 0.490196, 0.94902, 0.341176, 1 )
text = "Quit to desktop"
flat = true

[node name="SettingsMenu" type="VBoxContainer" parent="MarginContainer"]
visible = false
margin_right = 711.0
margin_bottom = 682.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20
alignment = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Resolution" type="HBoxContainer" parent="MarginContainer/SettingsMenu"]
margin_top = 186.0
margin_right = 711.0
margin_bottom = 245.0

[node name="Label" type="Label" parent="MarginContainer/SettingsMenu/Resolution"]
margin_top = 3.0
margin_right = 227.0
margin_bottom = 56.0
custom_fonts/font = ExtResource( 3 )
text = "Resolution"

[node name="OptionsResolution" type="OptionButton" parent="MarginContainer/SettingsMenu/Resolution"]
margin_left = 231.0
margin_right = 711.0
margin_bottom = 59.0
focus_neighbour_top = NodePath("../../ButtonBack")
focus_neighbour_bottom = NodePath("../../Fullscreen/CheckBoxFullscreen")
focus_next = NodePath("../../Fullscreen/CheckBoxFullscreen")
focus_previous = NodePath("../../ButtonBack")
size_flags_horizontal = 3
custom_styles/focus = SubResource( 6 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_hover = Color( 0.929412, 0.94902, 0.341176, 1 )
custom_colors/font_color_pressed = Color( 0.490196, 0.94902, 0.341176, 1 )
text = "1920x1080"
flat = true
align = 1
items = [ "1920x1080", null, false, 0, null, "1280x720", null, false, 1, null, "640x360", null, false, 2, null ]
selected = 0

[node name="Fullscreen" type="HBoxContainer" parent="MarginContainer/SettingsMenu"]
margin_top = 265.0
margin_right = 711.0
margin_bottom = 326.0

[node name="Label" type="Label" parent="MarginContainer/SettingsMenu/Fullscreen"]
margin_top = 4.0
margin_right = 219.0
margin_bottom = 57.0
custom_fonts/font = ExtResource( 3 )
text = "Fullscreen"

[node name="Label2" type="Label" parent="MarginContainer/SettingsMenu/Fullscreen"]
margin_left = 223.0
margin_top = 23.0
margin_right = 343.0
margin_bottom = 37.0
rect_min_size = Vector2( 120, 0 )

[node name="CheckBoxFullscreen" type="CheckBox" parent="MarginContainer/SettingsMenu/Fullscreen"]
margin_left = 347.0
margin_right = 711.0
margin_bottom = 61.0
focus_neighbour_top = NodePath("../../Resolution/OptionsResolution")
focus_neighbour_bottom = NodePath("../../ButtonBack")
focus_next = NodePath("../../ButtonBack")
focus_previous = NodePath("../../Resolution/OptionsResolution")
size_flags_horizontal = 3
custom_styles/focus = SubResource( 7 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_disabled = Color( 0.94902, 0.341176, 0.341176, 1 )
custom_colors/font_color_hover = Color( 0.929412, 0.94902, 0.341176, 1 )
text = "Off"

[node name="ButtonBack" type="Button" parent="MarginContainer/SettingsMenu"]
margin_top = 419.0
margin_right = 711.0
margin_bottom = 496.0
rect_min_size = Vector2( 360, 60 )
focus_neighbour_top = NodePath("../Fullscreen/CheckBoxFullscreen")
focus_neighbour_bottom = NodePath("../Resolution/OptionsResolution")
focus_next = NodePath("../Resolution/OptionsResolution")
focus_previous = NodePath("../Fullscreen/CheckBoxFullscreen")
custom_styles/focus = SubResource( 8 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_hover = Color( 0.929412, 0.94902, 0.341176, 1 )
custom_colors/font_color_pressed = Color( 0.490196, 0.94902, 0.341176, 1 )
text = "Back"
flat = true

[connection signal="pressed" from="MarginContainer/PauseMenu/ButtonResume" to="." method="_on_ButtonResume_pressed"]
[connection signal="pressed" from="MarginContainer/PauseMenu/ButtonRestart" to="." method="_on_ButtonRestart_pressed"]
[connection signal="pressed" from="MarginContainer/PauseMenu/ButtonSettings" to="." method="_on_ButtonSettings_pressed"]
[connection signal="pressed" from="MarginContainer/PauseMenu/ButtonMainMenu" to="." method="_on_ButtonMainMenu_pressed"]
[connection signal="pressed" from="MarginContainer/PauseMenu/ButtonQuit" to="." method="_on_ButtonQuit_pressed"]
[connection signal="item_selected" from="MarginContainer/SettingsMenu/Resolution/OptionsResolution" to="." method="_on_OptionsResolution_item_selected"]
[connection signal="toggled" from="MarginContainer/SettingsMenu/Fullscreen/CheckBoxFullscreen" to="." method="_on_CheckBoxFullscreen_toggled"]
[connection signal="pressed" from="MarginContainer/SettingsMenu/ButtonBack" to="." method="_on_ButtonBack_pressed"]
